ARROW-4824: [Python] Fix error checking in read_csv()

Raise a TypeError when a text file is given to read_csv(),
as only binary files are allowed.

Also fix a systemic issue where Python exceptions could be
swallowed by C++ destructors that could call back into Python
and clear the current error status.  The solution is to define
a "safe" facility to call into Python code from C++ without
clobbering the current error status.